WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137133
Null deref in setStateScrollingNodeSnapOffsetsAsFloat
https://bugs.webkit.org/show_bug.cgi?id=137133
Summary
Null deref in setStateScrollingNodeSnapOffsetsAsFloat
Tim Horton
Reported
2014-09-25 16:43:16 PDT
Null deref in setStateScrollingNodeSnapOffsetsAsFloat
Attachments
Patch
(3.08 KB, patch)
2014-09-25 16:45 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-09-25 16:45:39 PDT
Created
attachment 238683
[details]
Patch
Tim Horton
Comment 2
2014-09-28 01:03:02 PDT
http://trac.webkit.org/changeset/173981
Tim Horton
Comment 3
2014-09-28 01:03:10 PDT
<
rdar://problem/18447820
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug