Null deref in setStateScrollingNodeSnapOffsetsAsFloat https://bugs.webkit.org/show_bug.cgi?id=137133 <rdar://problem/18447820>

Reviewed by Beth Dakin.

* page/scrolling/AsyncScrollingCoordinator.cpp:
(WebCore::AsyncScrollingCoordinator::frameViewLayoutUpdated):
(WebCore::AsyncScrollingCoordinator::updateOverflowScrollingNode):
Get the deviceScaleFactor from m_page instead of various other places,
because scrolledContentsLayer can be null in the case of non-composited
overflow scroll.


Canonical link: https://commits.webkit.org/154934@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173981 268f45cc-cd09-0410-ab3c-d52691b4dbfc